# poetry-plugin-pycopy

./: .gitignore  README.md  pyproject.toml
poetry_plugin_pycopy/: __init__.py  models.py  plugin.py  pycopy.py
scripts/: pre_commit.py
src/: plugin.py
tests/: conftest.py  pycopy_test.py
tests/assets/toml-samples/: missing-config-key.toml  missing-config.toml  valid-config.toml
