[tool.poetry]
name = "poetry-pycopy-plugin"
version = "0.1.0"
description = "Copy fields from pyproject.toml to source directory"
authors = ["Daniel Fajt <daniel29se@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
poetry = "^1.2.2"

[tool.poetry.group.dev.dependencies]
isort = "^5.10.1"
mypy = "^0.982"
black = "^22.10.0"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"