[tool.poetry]
name = "poetry-plugin-pycopy"
version = "1.0.1"
description = "Copy fields from pyproject.toml to source directory"
authors = ["Daniel Fajt <daniel29se@gmail.com>"]
license = "unlicense.org"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/danielfajt/poetry-plugin-pycopy"
"Bug Tracker" = "https://github.com/danielfajt/poetry-plugin-pycopy/issues"

[tool.poetry.dependencies]
python = "^3.10"
poetry = "^1.2.2"

[tool.poetry.group.dev.dependencies]
isort = "^5.10.1"
mypy = "^0.982"
black = "^22.10.0"
flake8 = "^5.0.4"

[tool.poetry.group.test.dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."poetry.application.plugin"]
pycopy = "plugin:PoetryPluginPycopy"

[tool.mypy]
ignore_missing_imports = true
ignore_missing_imports_per_module = true

[tool.black]
skip-string-normalization = true
line-length = 120

[tool.isort]
profile = "black"
skip_glob = [".venv", "venv", "docs/*"]
skip = [".md", ".json"]